--- a/build.gradle
+++ b/build.gradle
@@ -11,4 +11,6 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.3"
+    compile group: "org.apache.commons", name: "commons-lang3", version: "3.6"
 }
