--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,5 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.3"
     compile group: "org.apache.commons", name: "commons-lang3", version: "3.6"
+    compile group: "com.google.code.gson", name: "gson", version: "2.4"
 }
