--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     compile group: "org.apache.commons", name: "commons-lang3", version: "3.6"
     compile group: "org.slf4j", name: "slf4j-api", version: "1.7.12"
     compile group: "com.google.code.gson", name: "gson", version: "2.4"
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.5'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
