--- a/build.gradle
+++ b/build.gradle
@@ -17,4 +17,6 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.5'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: "org.slf4j", name: "slf4j-simple", version: "1.7.12"
+    testCompile group: "com.github.rodrigosaito", name: "mockwebserver-player", version: "1.1.0"
 }
