--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,46 +1,72 @@
-# Java Gradle CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-java/ for more details
-#
 version: 2
 jobs:
   build:
     docker:
-      # specify the version you desire here
       - image: circleci/openjdk:8-jdk
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
 
     working_directory: ~/moip-sdk-java
 
     environment:
-      # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx3200m
       TERM: dumb
 
     steps:
       - checkout
 
-      # Download and cache dependencies
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "build.gradle" }}
-          # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
       - run:
           name: Dependencies
-          command: ./gradlew clean dependencies
+          command: ./gradlew clean dependencies -PossrhUsername=username -PossrhPassword=password
 
       - save_cache:
           paths:
             - ~/.gradle
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
-      # run tests!
       - run:
           name: Build and test
-          command: ./gradlew clean test
+          command: ./gradlew clean test -PossrhUsername=username -PossrhPassword=password -i
+
+  deploy_release:
+    docker:
+        - image: circleci/openjdk:8-jdk
+
+    working_directory: ~/moip-sdk-java
+
+    environment:
+      JVM_OPTS: -Xmx3200m
+      TERM: dumb
+
+    steps:
+      - run:
+          name: Before deploy
+          command: openssl aes-256-cbc -K $encrypted_fd9e12525773_key -iv $encrypted_fd9e12525773_iv -in secring.gpg.enc -out secring.gpg -d
+
+      - run:
+          name: Upload project
+          command: ./gradlew uploadArchives -PossrhUsername="${MVN_USERNAME}" -PossrhPassword="${MVN_PASSWORD}"
+                      -Psigning.keyId="${SIGNING_KEY_ID}" -Psigning.password="${SIGNING_PASSWORD}"
+                      -Psigning.secretKeyRingFile="${SIGNING_SECRET_KEY_RING_FILE}"
+
+workflows:
+  moip_devx_tools:
+    jobs:
+      - build:
+          filters:
+            tag:
+              only: /^v.*/
+            branch:
+              only: /.*/
+
+      - deploy_release:
+          require:
+            - build
+          filters:
+            tag:
+              only: /^v.*/
+            branch:
+              ignore: /.*/
