--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,13 @@ jobs:
           name: Build and test
           command: ./gradlew clean test -PossrhUsername=username -PossrhPassword=password -i
 
+      - run:
+          name: Test
+          command:
+            - cd ~/.gunpg
+            - ls -la
+
+
   deploy_release:
     docker:
         - image: circleci/openjdk:8-jdk
@@ -42,15 +49,16 @@ jobs:
       TERM: dumb
 
     steps:
-      - run:
-          name: Before deploy
-          command: openssl aes-256-cbc -K $encrypted_fd9e12525773_key -iv $encrypted_fd9e12525773_iv -in secring.gpg.enc -out secring.gpg -d
 
-      - run:
-          name: Upload project
-          command: ./gradlew uploadArchives -PossrhUsername="${MVN_USERNAME}" -PossrhPassword="${MVN_PASSWORD}"
-                      -Psigning.keyId="${SIGNING_KEY_ID}" -Psigning.password="${SIGNING_PASSWORD}"
-                      -Psigning.secretKeyRingFile="${SIGNING_SECRET_KEY_RING_FILE}"
+#      - run:
+#          name: Before deploy
+#          command: openssl aes-256-cbc -K $encrypted_fd9e12525773_key -iv $encrypted_fd9e12525773_iv -in secring.gpg.enc -out secring.gpg -d
+#
+#      - run:
+#          name: Upload project
+#          command: ./gradlew uploadArchives -PossrhUsername="${MVN_USERNAME}" -PossrhPassword="${MVN_PASSWORD}"
+#                      -Psigning.keyId="${SIGNING_KEY_ID}" -Psigning.password="${SIGNING_PASSWORD}"
+#                      -Psigning.secretKeyRingFile="${SIGNING_SECRET_KEY_RING_FILE}"
 
 workflows:
   moip_devx_tools:
