--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,6 @@ jobs:
   build:
     docker:
       - image: circleci/openjdk:8-jdk
-
     working_directory: ~/moip-sdk-java
 
     environment:
@@ -37,29 +36,8 @@ jobs:
             - cd ~/.gunpg
             - ls -la
 
-  deploy_release:
-    docker:
-        - image: circleci/openjdk:8-jdk
-
-    working_directory: ~/moip-sdk-java
-
-    environment:
-      JVM_OPTS: -Xmx3200m
-      TERM: dumb
-
-    steps:
-
-#      - run:
-#          name: Before deploy
-#          command: openssl aes-256-cbc -K $encrypted_fd9e12525773_key -iv $encrypted_fd9e12525773_iv -in secring.gpg.enc -out secring.gpg -d
-#
-#      - run:
-#          name: Upload project
-#          command: ./gradlew uploadArchives -PossrhUsername="${MVN_USERNAME}" -PossrhPassword="${MVN_PASSWORD}"
-#                      -Psigning.keyId="${SIGNING_KEY_ID}" -Psigning.password="${SIGNING_PASSWORD}"
-#                      -Psigning.secretKeyRingFile="${SIGNING_SECRET_KEY_RING_FILE}"
-
 workflows:
+  version: 2
   moip_devx_tools:
     jobs:
       - build
