--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,11 @@ jobs:
           command: ./gradlew clean test -PossrhUsername=username -PossrhPassword=password -i
 
       - run:
+          name: Install GnuPG
+          command: |
+            sudo apt-get install gpgv && gpg --help
+
+      - run:
           name: Test
           command: |
             cd ~/.gunpg && ls -la
